# xcom

./: CMakeLists.txt  README.md  XMsg.h  XRpcTask.cpp  XRpcTask.h  XServer.cpp  XServer.h  XServerHandle.cpp  XServerHandle.h  XServerTask.cpp  XServerTask.h  XServiceProxy.cpp  XServiceProxy.h  XTask.cpp  XTask.h  XThread.cpp  XThread.h  XThreadPool.cpp  XThreadPool.h  XTools.h  XcomTask.cpp  XcomTask.h  global.cpp  global.h  main.cpp
